Just a small typo correction

--- a/recipes/carrot-cake.html
+++ b/recipes/carrot-cake.html
@@ -62,7 +62,7 @@
                     </ol>
        
         <p><small>Recipe source: <a href="https://panelinha.com.br/receita/bolo-de-cenoura-com-cobertura-de-chocolate">Panelinha</a></small></p>
-        <p><a href="../index.html">Return to the Homepage</a></p>
+        <p><a href="../index.html">Return to Homepage</a></p>
     </body>
 
 </html>
