--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
     </head>
+
     <body>
         <h1>Odin Recipes</h1>
-        <p><a href="recipes/carrot-cake.html">Carrot Cake</a></p>
+            <ul>
+                <li><a href="recipes/carrot-cake.html">Carrot Cake</a></li>
+                <li><a href="recipes/chocolate-cake.html">Vegan Chocolate Cake</a></li>
+                <li><a href="recipes/banana-tapioca.html">Vitor's Delicious Banana Tapioca</a></li>
+            </ul>
     </body>
 </html>
