Finish the website (html part)

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <p>Delicious easy recipes straight from Brazil.</p>
             <ul>
                 <li><a href="recipes/carrot-cake.html">Carrot Cake</a></li>
                 <li><a href="recipes/chocolate-cake.html">Vegan Chocolate Cake</a></li>
-                <li><a href="recipes/banana-tapioca.html">Vitor's Delicious Banana Tapioca</a></li>
+                <li><a href="recipes/banana-tapioca.html">Vitor's Delicious Banana Tapioca Crepe</a></li>
             </ul>
     </body>
 </html>
