--- a/recipes/banana-tapioca.html
+++ b/recipes/banana-tapioca.html
@@ -3,27 +3,43 @@
 
     <head>
         <meta charset="UTF-8">
-        <title>Banana Tapioca</title>
+        <title>Banana Tapioca Crepe</title>
     </head>
 
     <body>
-        <h1>Vitor's Delicious Banana Tapioca Breakfast</h1>
+        <h1>Vitor's Delicious Banana Tapioca Breakfast Crepe</h1>
         
-            <img src="" widht="720" alt="">
-            <p><small>Image source: <a href="">Link</a></small></p>
+            <img src="../images/banana-tapioca.jpg" width="720" alt="">
+            <p><small>Image source: <a href="https://minhasreceitinhas.com.br/receita/tapioca-de-banana-com-canela/">Receitinhas</a></small></p>
         
-            <p>Description</p>
+            <p>This is a delicious and healthy breakfast idea. It requires no cooking and is super quick to make. To keep it simple, use hydrated tapioca starch -
+               It's very common in Brazil. If you're in another country, check Brazilian or Latin markets.</p>
+            <p>For the best flavor, use high-quality natural peanut butter. Remember, peanut butter only needs one ingredient: peanuts!</p>
 
             <h2>Ingredients</h2>
+            <p>For a healthier breakfast, I like to add a mix of seeds to the crepe filling. It also adds a nice texture. I recommend preparing the mixture in
+               a separate glass jar - you can use it later with granolas, yogurt or açaí bowls, and more. To make it, simply combine equal parts of sunflower seeds, flaxseeds, 
+               chia seeds, and sesame seeds.</p>
                 <ul>
-                    <li>Ingredient 1</li>
-                    <li>Ingredient 2</li>
+                    <li>4 tablespoons of hydrated tapioca starch (approximately 100 g)</li>
+                    <li>1 large chopped banana</li>
+                    <li>1 tablespoon of peanut butter</li>
+                    <li>1 tablespoon of sliced oats</li>
+                    <li>1 tablespoon of seed mix</li>
+                    <li>1 teaspoon of honey</li>
+                    <li>1 teaspoon of cinnamon</li>
                 </ul>
 
             <h2>Steps</h2>
                 <ol>
-                    <li>Step 1</li>
-                    <li>Step 2</li>
+                    <li>Preheat a medium-sized frying pan on the stove for a minute.</li>
+                    <li>Add the tapioca starch. I like to to this directly from the bag, slowly spreading it evenly across surface of the pan. There's no need to
+                        grease the pan, even if it's not non-sticky.</li>
+                    <li>Before adding the filling, check if the tapioca starch is spread evenly. If not, use a spatula to finish the job.</li>
+                    <li>Add the filling: start with the banana, then add the dry ingredients - this way, your spoon won't get dirty, and you'll only need one.
+                        Finish with the peanut butter, then drizzle the honey on top.</li>
+                    <li>Fold the crepe in half and serve.</li>
+                    <li>Eat the crepe right away while it's still fresh - otherwise, it can quickly become soft.</li>
                 </ol>
 
     <p><a href="../index.html">Return to Homepage</a></p>
