--- a/recipes/chocolate-cake.html
+++ b/recipes/chocolate-cake.html
@@ -9,23 +9,42 @@
     <body>
         <h1>Vegan Chocolate Cake</h1>
 
-            <img src="" width="720" alt="">
-            <p><small>Image source: <a href="">Link</a></small></p>
+            <img src="../images/chocolate-cake.jpg" width="720" alt="">
+            <p><small>Image source: <a href="https://receitadaboa.com.br/receitas/bolo-de-chocolate-zero-acucar-com-apenas-4-ingredientes/">Receita da Boa</a></small></p>
 
-            <p>Description</p>
+            <p>With this vegan recipe, you won't miss dairy or eggs in your cake. It's a very tasty, fluffy and not-too-crumbly cake (after all, it's vegan!). The recipe 
+               is pretty straightforward. Measure all the ingredients carefully, follow the steps, and you won't have any problems. Feel free to top the cake with sliced 
+               oats or any frosting of your choice.</p>
 
             <h2>Ingredients</h2>
                 <ul>
-                    <li>Ingredient 1</li>
-                    <li>Ingredient 2</li>
+                    <li>1 &frac12; cups of all-purpose flour</li>
+                    <li>&frac14; cup of cocoa powder</li>
+                    <li>&frac13; cup of sugar</li>
+                    <li>1 teaspoon of baking powder</li>
+                    <li>&frac12; a teaspoon of baking soda</li>
+                    <li>250 ml of water</li>
+                    <li>60 ml of oil</li>
+                    <li>1 tablespoon of apple cider vinegar or lemon juice</li>
                 </ul>
 
             <h2>Steps</h2>
+                <p>You can mix all the dry ingredients in one bowl and all the liquid ingredients in another. Then, gradually add the dry to the liquid, always sifting.
+                   If you want to avoid dirtying two bowls, you can mix everything in just one. In this case, follow these steps:</p>
                 <ol>
-                    <li>Step 1</li>
-                    <li>Step 2</li>
+                    <li>In a large bowl, add the flour, cocoa powder and sugar one by one, sifting each as you add it.</li>
+                    <li>Add the baking soda and mix the ingredients with a whisk.</li>
+                    <li>Gradually add the water, mixing until you get a smooth batter.</li>
+                    <li>Add the oil, mixing it thorougly into the batter.</li>
+                    <li>Lastly, add the apple cider vinegar and mix well.</li>
+                    <li>Pour the batter into a greased and floured tube pan. Bake for 45 minutes.</li>
+                    <li>To check if the cake is ready, insert a fork into the center of the batter. If it comes out clean, the cake is done. If not, let it bake for a
+                        few more minutes.</li>
+                    <li>Once baked, let it cool for 30 minutes before serving or adding frosting.</li>
+                    <li>Enjoy!</li>
                 </ol>
-
+                
+    <p><small>Recipe source: <a href="https://www.instagram.com/mussinha/">Carol Mussinha</a></small></p>
     <p><a href="../index.html">Return to Homepage</a></p>
     </body>
 </html>
