--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
-    <body>
+    <body class="homepage">
+        <div class="container">
         <h1>Odin Recipes</h1>
-        <p>Delicious easy recipes straight from Brazil.</p>
-            <ul>
+        <img src="images/indeximage.png">
+        <p>Check out Vitor's delicious, easy recipes straight from Brazil:</p>
+            <ul class="recipes-list">
                 <li><a href="recipes/carrot-cake.html">Carrot Cake</a></li>
                 <li><a href="recipes/chocolate-cake.html">Vegan Chocolate Cake</a></li>
-                <li><a href="recipes/banana-tapioca.html">Vitor's Delicious Banana Tapioca Crepe</a></li>
+                <li><a href="recipes/banana-tapioca.html">Banana Tapioca Crepe</a></li>
             </ul>
+        </div>
     </body>
 </html>
