--- a/recipes/carrot-cake.html
+++ b/recipes/carrot-cake.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Carrot Cake</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <h1>Carrot Cake</h1>
