Finish CSS style of all website

--- a/recipes/chocolate-cake.html
+++ b/recipes/chocolate-cake.html
@@ -4,20 +4,22 @@
     <head>
         <meta charset="UTF-8">
         <title>Vegan Chocolate Cake</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
-    <body>
+    <body class="recipe-page">
+        <div class="recipe-container">
         <h1>Vegan Chocolate Cake</h1>
 
             <img src="../images/chocolate-cake.jpg" width="720" alt="">
-            <p><small>Image source: <a href="https://receitadaboa.com.br/receitas/bolo-de-chocolate-zero-acucar-com-apenas-4-ingredientes/">Receita da Boa</a></small></p>
-
+            <p class="caption"><small>Image source: <a href="https://receitadaboa.com.br/receitas/bolo-de-chocolate-zero-acucar-com-apenas-4-ingredientes/">Receita da Boa</a></small></p>
+            <div class="recipe-description">
             <p>With this vegan recipe, you won't miss dairy or eggs in your cake. It's a very tasty, fluffy and not-too-crumbly cake (after all, it's vegan!). The recipe 
                is pretty straightforward. Measure all the ingredients carefully, follow the steps, and you won't have any problems. Feel free to top the cake with sliced 
                oats or any frosting of your choice.</p>
-
+            </div>
             <h2>Ingredients</h2>
-                <ul>
+                <ul class="ingredients-list">
                     <li>1 &frac12; cups of all-purpose flour</li>
                     <li>&frac14; cup of cocoa powder</li>
                     <li>&frac13; cup of sugar</li>
@@ -29,9 +31,9 @@
                 </ul>
 
             <h2>Steps</h2>
-                <p>You can mix all the dry ingredients in one bowl and all the liquid ingredients in another. Then, gradually add the dry to the liquid, always sifting.
+                <p class="recipe-description">You can mix all the dry ingredients in one bowl and all the liquid ingredients in another. Then, gradually add the dry to the liquid, always sifting.
                    If you want to avoid dirtying two bowls, you can mix everything in just one. In this case, follow these steps:</p>
-                <ol>
+                <ol class="steps-list">
                     <li>In a large bowl, add the flour, cocoa powder and sugar one by one, sifting each as you add it.</li>
                     <li>Add the baking soda and mix the ingredients with a whisk.</li>
                     <li>Gradually add the water, mixing until you get a smooth batter.</li>
@@ -44,7 +46,8 @@
                     <li>Enjoy!</li>
                 </ol>
                 
-    <p><small>Recipe source: <a href="https://www.instagram.com/mussinha/">Carol Mussinha</a></small></p>
-    <p><a href="../index.html">Return to Homepage</a></p>
+    <p class="caption"><small>Recipe source: <a href="https://www.instagram.com/mussinha/">Carol Mussinha</a></small></p>
+    <p class="homepage-link"><a href="../index.html">Homepage</a></p>
+    </div>
     </body>
 </html>
