Adjust Padding and Margin, add Buttons
I've adjusted the allignment and size of all boxes
on the homepage using border-box. I also replaced
the recipes list with buttons instead of an
unordered list.

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <div class="container">
         <h1>Odin Recipes</h1>
         <img src="images/indeximage.png">
-        <p>Check out Vitor's delicious, easy recipes straight from Brazil:</p>
-            <ul class="recipes-list">
-                <li><a href="recipes/carrot-cake.html">Carrot Cake</a></li>
-                <li><a href="recipes/chocolate-cake.html">Vegan Chocolate Cake</a></li>
-                <li><a href="recipes/banana-tapioca.html">Banana Tapioca Crepe</a></li>
-            </ul>
+        <p class="page-description">Check out Vitor's delicious, easy recipes straight from Brazil:</p>
+            <div class="recipeslist">
+                <a href="recipes/carrot-cake.html"><spam class="recipe1"><p>Brazilian Carrot Cake</p></spam></a>
+                <a href="recipes/chocolate-cake.html"><spam class="recipe2"><p>Vegan Chocolate Cake</p></spam></a>
+                <a href="recipes/banana-tapioca.html"><spam class="recipe3"><p>Banana Tapioca Crepe</p></spam></a>
+            </div>
         </div>
     </body>
 </html>
