Finish Padding and Margin on All Pages
Made final adjustments to elements alignment, colors
and overal consistency.

--- a/recipes/banana-tapioca.html
+++ b/recipes/banana-tapioca.html
@@ -10,16 +10,17 @@
     <body class="recipe-page">
         <div class="recipe-container">
         <p class="homepage-link"><a href="../index.html">Homepage</a></p>
-        <h1>Vitor's Delicious Banana Tapioca Breakfast Crepe</h1>
+        <h2>Banana Tapioca Crepe</h2>
         
             <img src="../images/banana-tapioca.jpg" width="720" alt="">
-            <p class="caption"><small>Image source: <a href="https://minhasreceitinhas.com.br/receita/tapioca-de-banana-com-canela/">Receitinhas</a></small></p>
+            <p class="caption-img"><small>Image source: <a href="https://minhasreceitinhas.com.br/receita/tapioca-de-banana-com-canela/">Receitinhas</a></small></p>
             <div class="recipe-description"> 
             <p>This is a delicious and healthy breakfast idea. It requires no cooking and is super quick to make. To keep it simple, use hydrated tapioca starch -
                It's very common in Brazil. If you're in another country, check Brazilian or Latin markets.</p>
+            <br>
             <p>For the best flavor, use high-quality natural peanut butter. Remember, peanut butter only needs one ingredient: peanuts!</p>
             </div>
-            <h2>Ingredients</h2>
+            <h3>Ingredients</h3>
             <p class="recipe-description">For a healthier breakfast, I like to add a mix of seeds to the crepe filling. It also adds a nice texture. I recommend preparing the mixture in
                a separate glass jar - you can use it later with granolas, yogurt or açaí bowls, and more. To make it, simply combine equal parts of sunflower seeds, flaxseeds, 
                chia seeds, and sesame seeds.</p>
@@ -33,7 +34,7 @@
                     <li>1 teaspoon of cinnamon</li>
                 </ul>
 
-            <h2>Steps</h2>
+            <h3>Steps</h3>
                 <ol class="steps-list">
                     <li>Preheat a medium-sized frying pan on the stove for a minute.</li>
                     <li>Add the tapioca starch. I like to to this directly from the bag, slowly spreading it evenly across surface of the pan. There's no need to
@@ -45,7 +46,7 @@
                     <li>Eat the crepe right away while it's still fresh - otherwise, it can quickly become soft.</li>
                 </ol>
                 
-    <p class="caption"><small>Recipe source: myself</small></p>
+    <p class="caption-src"><small>Recipe source: myself</small></p>
     </div>
     </body>
 
