--- a/recipes/chocolate-cake.html
+++ b/recipes/chocolate-cake.html
@@ -9,16 +9,16 @@
 
     <body class="recipe-page">
         <div class="recipe-container">
-        <h1>Vegan Chocolate Cake</h1>
+        <h2>Vegan Chocolate Cake</h2>
 
             <img src="../images/chocolate-cake.jpg" width="720" alt="">
-            <p class="caption"><small>Image source: <a href="https://receitadaboa.com.br/receitas/bolo-de-chocolate-zero-acucar-com-apenas-4-ingredientes/">Receita da Boa</a></small></p>
+            <p class="caption-img"><small>Image source: <a href="https://receitadaboa.com.br/receitas/bolo-de-chocolate-zero-acucar-com-apenas-4-ingredientes/">Receita da Boa</a></small></p>
             <div class="recipe-description">
             <p>With this vegan recipe, you won't miss dairy or eggs in your cake. It's a very tasty, fluffy and not-too-crumbly cake (after all, it's vegan!). The recipe 
                is pretty straightforward. Measure all the ingredients carefully, follow the steps, and you won't have any problems. Feel free to top the cake with sliced 
                oats or any frosting of your choice.</p>
             </div>
-            <h2>Ingredients</h2>
+            <h3>Ingredients</h3>
                 <ul class="ingredients-list">
                     <li>1 &frac12; cups of all-purpose flour</li>
                     <li>&frac14; cup of cocoa powder</li>
@@ -30,7 +30,7 @@
                     <li>1 tablespoon of apple cider vinegar or lemon juice</li>
                 </ul>
 
-            <h2>Steps</h2>
+            <h3>Steps</h3>
                 <p class="recipe-description">You can mix all the dry ingredients in one bowl and all the liquid ingredients in another. Then, gradually add the dry to the liquid, always sifting.
                    If you want to avoid dirtying two bowls, you can mix everything in just one. In this case, follow these steps:</p>
                 <ol class="steps-list">
@@ -46,7 +46,7 @@
                     <li>Enjoy!</li>
                 </ol>
                 
-    <p class="caption"><small>Recipe source: <a href="https://www.instagram.com/mussinha/">Carol Mussinha</a></small></p>
+    <p class="caption-src"><small>Recipe source: <a href="https://www.instagram.com/mussinha/">Carol Mussinha</a></small></p>
     <p class="homepage-link"><a href="../index.html">Homepage</a></p>
     </div>
     </body>
