Edit recipe list using flexbox
Changed the recipe list layout using flexbox

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
         <h1>Odin Recipes</h1>
         <img src="images/indeximage.png">
         <p class="page-description">Check out Vitor's delicious, easy recipes straight from Brazil:</p>
-            <div class="recipeslist">
-                <a href="recipes/carrot-cake.html"><spam class="recipe1"><p>Brazilian Carrot Cake</p></spam></a>
-                <a href="recipes/chocolate-cake.html"><spam class="recipe2"><p>Vegan Chocolate Cake</p></spam></a>
-                <a href="recipes/banana-tapioca.html"><spam class="recipe3"><p>Banana Tapioca Crepe</p></spam></a>
+            <div class="recipeslist-container">
+                <div class="recipeslist">
+                    <a href="recipes/carrot-cake.html"><div class="recipes-item recipe1"><p>Brazilian Carrot Cake</p></div></a>
+                    <a href="recipes/chocolate-cake.html"><div class="recipes-item recipe2"><p>Vegan Chocolate Cake</p></div></a>
+                    <a href="recipes/banana-tapioca.html"><div class="recipes-item recipe3"><p>Banana Tapioca Crepe</p></div></a>
+                </div>
             </div>
         </div>
     </body>
